<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dip"
            android:layout_weight="1"
            android:alignmentMode="alignBounds"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:useDefaultMargins="true" >

            <TextView
                style="@style/titleStyle"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_row="0"
                android:text="@string/label_status" />

            <TextView
                android:id="@+id/status"
                style="@style/disconnectStyle"
                android:layout_width="113dp"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_row="0"
                android:text="@string/status_disconnected" />

            <TextView
                style="@style/titleStyle"
                android:layout_width="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/label_pseudo" />

            <EditText
                android:id="@+id/edt_pseudo"
                style="@style/editTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:hint="@string/hint_pseudo"
                android:maxLength="15"
                android:maxLines="1" />

            <TextView
                android:id="@+id/instructions"
                style="@style/simpleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_gravity="center"
                android:layout_marginTop="1dip"
                android:text="@string/instruction_text" />
        </GridLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dip"
            android:layout_weight="5"
            android:orientation="vertical" >

            <Button
                android:id="@+id/play_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_play" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>