<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">
	<LinearLayout android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:id="@+id/answer_layout" >
	    
	  	<TextView
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:paddingBottom="5dip"
	  		android:text="@string/title_time_progression"
	  		style="@style/titleStyle"/>
	  	<ProgressBar
	  		android:id="@+id/timeBar"
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:paddingBottom="5dp"
	  		android:paddingLeft="5dp"
	  		android:paddingRight="5dp"
	  		style="@android:style/Widget.ProgressBar.Horizontal" />
	    
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        style="@style/titleStyle"
	        android:text="@string/title_answers"
	        android:layout_marginBottom="5dip"/>
	    
		<View android:id="@+id/answerView"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"/>
		
	    <Button android:id="@+id/select_answer"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dip"
	        android:text="@string/btn_choose"/>
	</LinearLayout>    
</ScrollView>
