<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:focusable="true" 
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dip"
            android:orientation="horizontal" >

            <TextView
                style="@style/titleStyle"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/label_status" />

            <TextView
                android:id="@+id/status"
                style="@style/simpleTextStyle"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/status_connected"
                android:layout_marginLeft="5dip"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_margin="10dip"
            android:layout_weight="5"
            android:orientation="vertical" >

            <Button
                android:id="@+id/play_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_play" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>